# trace_selector

./: .gitignore  CITATION.cff  LICENSE  README.md  connection_test.ipynb  default_config.json  devNotebookAndreas.ipynb  iGluSnFR3_100Hz_scripted.pt  main.py  onefile.py  onefileversion.py  pyproject.toml  pyproject_hatchling.toml  pyproject_poetry.toml  requirements.txt  setup.py  start_trace_selector.py  synapse_selector.py  test.ipynb  test.py  test_data.txt  to_dos.md  torchscript_example.ipynb  trace_selector_main.py
keep_folder/GluSnFR_C21_DIV17_5AP_CS1_R2_ALL_(FIA_02_101_xxxSDs_4.5SDs_11px).xlsx/: GluSnFR_C21_DIV17_5AP_CS1_R2_ALL_(FIA_02_101_xxxSDs_4.5SDs_11px).xlsx.xlsx
keep_folder/test_data.txt/: test_data.txt  test_data.txt.xlsx  test_data_ppr.csv  test_data_ppr.xlsx  test_data_responses.csv  test_data_responses.xlsx
models/: peak_detection-conv_output.pt
src/: configuration.py  gui.py  peak_dertection.py  ppr_calculation.py  threshold.py  trace_data.py
src/synapse_selector/: configuration.py  decay_compute.py  default_config.json  gui.py  main.py  peak_dertection.py  plot.py  ppr_calculation.py  settings_gui.py  trace_data.py
synapse_selector/: __main__.py  configuration.py  default_config.json  gui.py  main.py  threshold.py  trace_data.py
synapse_selector/detection/: model_implementation.py  model_wraper.py  model_zoo.py  peak_detection.py
synapse_selector/gui/: add_window.py  gui.py  gui_rework.py  mainwindow.py  settingswindow.py
synapse_selector/models/: anomaly_50_conv-out.pth
synapse_selector/settings/: default_settings.json  settings.json
synapse_selector/utils/: configuration.py  decay_compute.py  default_config.json  export.py  failure_rate.py  fraction_respond_first_pulse.py  gui.py  gui_rework.py  hash.py  iglu_cnn.py  normalization.py  peak_detection.py  plot.py  ppr_calculation.py  pytorch_models.py  settings_gui.py  trace_data.py
trace_selector/: __init__.py  __main__.py  main.py
trace_selector/detection/: model_zoo.py  peak_detection.py
trace_selector/gui/: api.py  (+2 more)
trace_selector_dev/: __init__.py  __main__.py
(+18 files in other folders)
