[tool.poetry]
name = "synapse-selector"
version = "0.1.14"
description = "Small internal package for post-selection of Glutmate/Calcium signal responses."
authors = ["Stephan Weissbach <s.weissbach@uni-mainz.de>"]
readme = "README.md"
packages = [{include = "synapse_selector"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pyqt6 = "^6.5.3"
pyqt6-webengine = "^6.5.0"
numpy = "^1.26.1"
pandas = "^2.1.1"
scipy = "^1.11.3"
plotly = "^5.17.0"
openpyxl = "^3.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
synapse_selector = 'synapse_selector.main:main'
