[project]
name = "trace-selector"
version = "1.0.3_Beta"
description = "Small internal package for post-selection of Glutmate/Calcium signal responses."
authors = [
    {name="Stephan Weissbach", email="s.weissbach@uni-mainz.de"}
]
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "numpy >=1.26.1",
    "pandas >=2.1.1",
    "scipy >=1.11.3",
    "plotly >=5.17.0",
    "openpyxl >=3.1.2",
    "torch >=2.1.1",
    "pyqt6-webengine >=6.6.0",
    "requests >=2.31.0",
    "platformdirs >=4"
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"